syntax = "proto2";
option java_package = "com.rwproto";
option java_outer_classname = "DataSynProtos";
package DataSyn;

//数据同步操作类型
enum eSynOpType {
	UPDATE_LIST = 1;//更新一组数据
	UPDATE_SINGLE = 2; //更新一条数据
	ADD_SINGLE = 3; // 增加一条数据
	REMOVE_SINGLE = 4;// 删除一条数据
	UPDATE_FIELD = 5;//只更新单条记录的某些字段
}


message SynData{
	required string id =1;
	optional string jsonData = 2;
}


enum eSynType	//数据同步类型
{
	COPY_LEVEL_RECORD = 1;	//关卡记录，包括精英，普通，英雄
	COPY_MAP_RECORD = 2;    //地图记录，包括精英，普通，英雄
	SECRETAREA_BASE_INFO = 3;    //帮派秘境-秘境基础信息
	SECRETAREA_DEF_RECORD = 4;    //帮派秘境-防守记录
	SECRETAREA_USER_INFO = 5;    //帮派秘境-用户信息
	SECRETAREA_DEFEND_TEAM_INFO = 6;    //帮派秘境-秘境的防守信息
	SECRETAREA_USER_RECORD = 7;  //帮派秘境-用户的秘境记录
	FASHION_ITEM = 8;			//时装数据
	EQUIP_ITEM=9;//装备列表
	SKILL_ITEM=10;//技能列表
	INLAY_ITEM=11;//镶嵌列表
	ROLE_ATTR_ITEM=12;//人物属性列表
	ROLE_BASE_ITEM=13;//佣兵（人物）基本信息
	USER_HEROS=14; //用户佣兵模块的信息
	USER_DATA=15;//用户数据帐号，性别等
	USER_GAME_DATA=16;//用户游戏相关数据
	USER_MAGIC = 17;//角色的法宝数据
	USER_ITEM_BAG = 18;//角色的背包数据
	DailyActivity=19;//日常活动
	Guild=20;//派帮
	Pve_UnendingWar=21;//无尽战火
	Pve_Trial=22;//聚宝之地,练气山谷,生存幻境
	Store_Data=23;//商店
	TASK_DATA=24;//任务数据同步
	VIP_DATA=25;//vip数据同步
	SETTING_DATA=26;//设置数据同步
	GUILD_USER_INFO=27;//帮派中和个人相关的数据
	SEVEN_DAY_GIF=28;//七日礼
	FRESHER_ATIVITY_DATA = 29;//开服活动
	ASSISTANT=30;//小秘书
	VERSION_COPY = 31;//副本版本，用来做关卡和地图的版本校验，不用做同步
	GroupBaseData=32;//帮派基础信息
	GroupMemberData = 33;//帮派正式成员信息
	GroupLog=34;//帮派log
	UserGroupAttributeData=35;//用户个人的帮派信息
	GroupCopyLevel=36;//帮派关卡记录
	GroupCopyMap=37; //帮派地图记录
	GroupCopyReward=38;//帮派奖励分配记录
	GroupApplyMemberData = 39;//申请成员信息
	GroupResearchSkill = 40;//帮派技能研发
	GroupStudySkill = 41;//帮派技能学习
	Charge = 42;//充值
	POWER_INFO = 43;//体力信息
	USER_TMP_GAME_DATA = 44;//用户的临时内存数据
	HERO_FETTERS = 45;//英雄羁绊
	FIX_NORM_EQUIP=46; //专属装备普通
	FIX_EXP_EQUIP=47; //专属装备经验类型
	UserGroupSecretData=48; //帮派秘境用户数据
	GroupSecretData = 49;   //秘境数据
	MagicSecretData = 50;   //法宝秘境数据
	MagicChapterData = 51;   //法宝秘境章节数据
	SECRETAREA_TEAM_INFO = 52;//帮派秘境的阵容信息


	//活动从60-79
	ActivityCountType = 60;//活动，计数类型
	//月卡
	ActivityTimeCardType = 61;//活动，计数类型
	ActivityRateType = 62;//活动，奖励翻倍类型
	ActivityDateType = 63;//活动，日期类型
	ActivityTimeSaleType = 64;//活动，限时折扣
	ActivityDateSaleType = 65;//活动，每日折扣
	ActivityRankType = 66;//活动，排行榜
	ActivityExchangeType = 67;//活动，兑换
	ActivityTimeCountType = 68;//活动，在线奖励
	ActivityDailyType = 69;//活动，每日福利
	ActivityVitalityType = 70;//活动，活跃度

	QuestionList = 80; //反馈问题列表
}

message MsgDataSynList
{
    repeated MsgDataSyn msgDataSyn = 3;				//同步数列表

}

message DataSynVersion{
	required eSynType synType = 1;
	required int32 version = 2;
}

message MsgDataSynVersion{
	repeated DataSynVersion version = 1;
}

message MsgDataSyn
{
    required eSynType synType = 1;				//同步数据类型
    optional eSynOpType synOpType = 2;			//同步操作类型
    repeated SynData SynData = 3;				//同步数据
    optional int32 version=4;					//数据版本号
}